# music-looper-gui

./: .gitignore  README.md  build.sh  package.json
.github/workflows/: release.yml
backend/: MusicLooperSidecar.spec  allin1_enhancer.py  analyzer.py  app.py  core.py  deep_analyzer.py  http_server.py  pyproject.toml  server.py  test_natten_compat.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: dev-aborterror-suppressor.tsx  export-menu.tsx  loop-editor.tsx  loop-table.tsx  player-controls.tsx  waveform.tsx
frontend/src/components/ui/: dialog.tsx  dropdown-menu.tsx  progress.tsx
frontend/src/lib/: api.ts  looping-webaudio-player.ts
scripts/: dev.mjs  ensure-dev-sidecar.sh  setup.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
