[project]
name = "music-looper"
version = "0.1.0"
description = "Music Looper Desktop App - Find perfect loop points in audio files"
requires-python = ">=3.10"
dependencies = [
    "pywebview>=5.0.0",
    "numpy",
    "librosa",
    "torch",
    "torchaudio",
    "transformers",
    "mutagen",
    "soundfile",
]

[project.scripts]
music-looper = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py", "deep_analyzer.py"]
